--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+.env
+models
 
 
 # macOS files
