--- a/package.json
+++ b/package.json
@@ -60,8 +60,15 @@
     "build:native": "./build-native.sh",
     "build:ios": "cd ios && cmake -B build -S . && cmake --build build --config Release",
     "build:android": "cd android && ./gradlew assembleRelease",
+    "test": "jest",
+    "test:integration": "./scripts/test-integration.sh",
+    "test:integration:jest": "jest --config test/jest.integration.config.js",
+    "test:integration:custom": "ts-node test/integration/test-runner.ts",
+    "test:unit": "jest --testPathIgnorePatterns=test/integration",
+    "test:coverage": "jest --coverage",
     "clean": "rimraf ./dist",
     "clean:native": "rimraf ios/build android/build android/src/main/jniLibs",
+    "clean:test": "rimraf test/output test/coverage",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build"
   },
