--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "pretty": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "importHelpers": true,
+    "downlevelIteration": true
   },
   "files": ["src/index.ts"]
 }
