--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        
+        ndk {
+            abiFilters 'arm64-v8a'
+        }
+    }
+    
+    externalNativeBuild {
+        cmake {
+            path "src/main/CMakeLists.txt"
+            version "3.22.1"
+        }
     }
     buildTypes {
         release {
