ADAS-31:Addinf Rel 0.13

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
     }
+    sourceSets {
+        main {
+            java {
+                srcDirs = ['src/main/java']
+            }
+        }
+    }
 }
 
 repositories {
