--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.13",
   "description": "A native Capacitor plugin that embeds llama.cpp directly into mobile apps, enabling offline AI inference with comprehensive support for text generation, multimodal processing, TTS, LoRA adapters, and more.",
   "main": "dist/plugin.cjs.js",
+  "type": "module",
   "module": "dist/esm/index.js",
   "types": "types/llama-cpp-capacitor.d.ts",
   "unpkg": "dist/plugin.js",
@@ -51,7 +52,7 @@
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
     "verify:ios": "xcodebuild -scheme LlamaCpp -destination generic/platform=iOS",
-    "verify:android": "cd android && ./gradlew clean build test && cd ..",
+    "verify:android": "cd android && gradlew.bat clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
@@ -62,7 +63,7 @@
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
     "build:native": "./build-native.sh",
     "build:ios": "cd ios && cmake -B build -S . && cmake --build build --config Release",
-    "build:android": "cd android && ./gradlew assembleRelease",
+    "build:android": "cd android && gradlew.bat assembleRelease",
     "test": "jest",
     "test:integration": "./scripts/test-integration.sh",
     "test:integration:jest": "jest --config test/jest.integration.config.js",
